src/objects/Account_Farming_Area__c.object
<CustomObject>
    <description>This object is to store the historical and current farming area data</description>
    <fields>
        <fullName>Account_Business_Role_SFID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>to describe whether it&apos;s a Grower/Dealer</description>
        <label>Account Business Role</label>
        <referenceTo>Account_Business_Role__c</referenceTo>
        <relationshipLabel>Account Farming Areas</relationshipLabel>
        <relationshipName>Account_Farming_Areas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_SFID__c</fullName>
        <description>Account to which the Farming area is referring to</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Farming Areas</relationshipLabel>
        <relationshipName>Account_Farming_Areas</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Archive_Date__c</fullName>
        <label>Archive Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Archive_Ind__c</fullName>
        <defaultValue>&quot;N&quot;</defaultValue>
        <description>To describe the status of the record</description>
        <label>Archive Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Area_Opportunity__c</fullName>
        <label>Opportunity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Area_Qty__c</fullName>
        <description>Farming Area of Grower(by crop)</description>
        <label>Agricultural Use Farming Area</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Area_Updated_DateTime__c</fullName>
        <description>Last updated on</description>
        <label>Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Area_Usage_Descr__c</fullName>
        <label>Agricultural Usage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Corn</fullName>
                </value>
                <value>
                    <fullName>Sorghum</fullName>
                </value>
                <value>
                    <fullName>Cotton</fullName>
                </value>
                <value>
                    <fullName>Alfalfa/Lucerne</fullName>
                </value>
                <value>
                    <fullName>Sudan/Sudax</fullName>
                </value>
                <value>
                    <fullName>Oats</fullName>
                </value>
                <value>
                    <fullName>R&amp;D Services</fullName>
                </value>
                <value>
                    <fullName>Potato</fullName>
                </value>
                <value>
                    <fullName>Lupines</fullName>
                </value>
                <value>
                    <fullName>Sugarbeet</fullName>
                </value>
                <value>
                    <fullName>CORN AND COTTON</fullName>
                </value>
                <value>
                    <fullName>Canola/Oilseed Rape</fullName>
                </value>
                <value>
                    <fullName>Rye</fullName>
                </value>
                <value>
                    <fullName>Wheat</fullName>
                </value>
                <value>
                    <fullName>Grass/Turf/Lawn</fullName>
                </value>
                <value>
                    <fullName>Sunflower</fullName>
                </value>
                <value>
                    <fullName>Barley</fullName>
                </value>
                <value>
                    <fullName>Seed Other</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous Seed</fullName>
                </value>
                <value>
                    <fullName>Sugarcane</fullName>
                </value>
                <value>
                    <fullName>Triticale</fullName>
                </value>
                <value>
                    <fullName>Rice</fullName>
                </value>
                <value>
                    <fullName>Soy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Area_Usage_UOM_Descr__c</fullName>
        <label>Unit of Measure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Acres</fullName>
                </value>
                <value>
                    <fullName>Hectares</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Brand_Name__c</fullName>
        <label>Brand</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <label>Budget</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HC_Integration_Key__c</fullName>
        <description>This field is for the temporary storage of an external id for the Heroku Connect Integration. It will be used as necessary for parent-child relationships. Further integrations will be via the Salesforce Record ID.</description>
        <externalId>true</externalId>
        <inlineHelpText>This field is for the temporary storage of an external id for the Heroku Connect Integration. It will be used as necessary for parent-child relationships. Further integrations will be via the Salesforce Record ID.</inlineHelpText>
        <label>Heroku Connect Integration Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Inbound_Area_Last_Updated__c</fullName>
        <label>Inbound Area Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Inbound_Area_Qty__c</fullName>
        <label>Inbound AgriculturalUse Farming Area Qty</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inbound_Area_Use_UOM_Descr__c</fullName>
        <label>Inbound Farming Area UOM</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Acre</fullName>
                </value>
                <value>
                    <fullName>Hectare</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inbound_Total_Farm_Area_Qty__c</fullName>
        <label>Inbound Total Farming Area Qty</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NPS__c</fullName>
        <label>NPS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Sales__c</fullName>
        <description>Displays the net sales</description>
        <label>Net Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Orders__c</fullName>
        <label>Orders</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_SFID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Account Farming Area</label>
        <referenceTo>Account_Farming_Area__c</referenceTo>
        <relationshipLabel>Account Farming Areas</relationshipLabel>
        <relationshipName>Account_Farming_Areas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Probability_ff_Purchase__c</fullName>
        <label>Probability of Purchase</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>At Risk</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RFM_Score__c</fullName>
        <label>RFM Score</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Very High</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Selling_Season_Descr__c</fullName>
        <label>Selling Season</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2017 Safra</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>2017 Safrinha</fullName>
                </value>
                <value>
                    <fullName>2016 Safra</fullName>
                </value>
                <value>
                    <fullName>2016 Sarfrinha</fullName>
                </value>
                <value>
                    <fullName>2015 Safra</fullName>
                </value>
                <value>
                    <fullName>2015 Safrinha</fullName>
                </value>
                <value>
                    <fullName>SUMMER</fullName>
                </value>
                <value>
                    <fullName>WINTER</fullName>
                </value>
                <value>
                    <fullName>SPRING</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Level_Class_Descr__c</fullName>
        <description>This field is to specify the level of service to be delivered to customer</description>
        <label>RADL</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Retain</fullName>
                </value>
                <value>
                    <fullName>Acquire</fullName>
                </value>
                <value>
                    <fullName>Develop</fullName>
                </value>
                <value>
                    <fullName>Light Touch</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Farming_Area_Qty__c</fullName>
        <label>Total Farming Area</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_Type__c</fullName>
        <description>This field is to specify the year type</description>
        <label>Year Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fiscal Year</fullName>
                </value>
                <value>
                    <fullName>Crop Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Account Farming Area</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account_SFID__c</columns>
        <columns>Account_Business_Role_SFID__c</columns>
        <columns>Service_Level_Class_Descr__c</columns>
        <columns>Selling_Season_Descr__c</columns>
        <columns>Area_Usage_UOM_Descr__c</columns>
        <columns>Year_Type__c</columns>
        <columns>Parent_SFID__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Account Farming Area Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Farming Areas</pluralLabel>
    <recordTypes>
        <fullName>Account_Farming_Area_Crop_Farming_Area</fullName>
        <active>true</active>
        <description>This record type is to store crop Farming Area data</description>
        <label>Crop Farming Area</label>
    </recordTypes>
    <recordTypes>
        <fullName>Account_Farming_Area_Total_Farming_Area</fullName>
        <active>true</active>
        <description>This record type is to store Total Farming Area data.</description>
        <label>Total Farming Area</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Farming_Data_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>IF(RecordType.Name == &quot;Crop Farming Area&quot;  &amp;&amp; Parent_SFID__c==null, True, False)</errorConditionFormula>
        <errorDisplayField>Parent_SFID__c</errorDisplayField>
        <errorMessage>Parent Record Is Must For Child Record [CROP Farming Area]</errorMessage>
    </validationRules>
</CustomObject>